Add IMG_9323.PNG to third project

--- a/index.html
+++ b/index.html
@@ -212,7 +212,9 @@
                             </div>
                             <div class="carousel-slide">
                                 <div class="mini-phone large">
-                                    <div class="mini-screen" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);"></div>
+                                    <div class="mini-screen">
+                                        <img src="images/IMG_9323.PNG" alt="Project screenshot" />
+                                    </div>
                                 </div>
                             </div>
                             <div class="carousel-slide">
