Add all 3 images to third project carousel

--- a/index.html
+++ b/index.html
@@ -207,7 +207,9 @@
                         <div class="carousel-track">
                             <div class="carousel-slide">
                                 <div class="mini-phone large">
-                                    <div class="mini-screen" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);"></div>
+                                    <div class="mini-screen">
+                                        <img src="images/IMG_9319.PNG" alt="Project screenshot" />
+                                    </div>
                                 </div>
                             </div>
                             <div class="carousel-slide">
@@ -219,7 +221,9 @@
                             </div>
                             <div class="carousel-slide">
                                 <div class="mini-phone large">
-                                    <div class="mini-screen" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);"></div>
+                                    <div class="mini-screen">
+                                        <img src="images/IMG_9332.PNG" alt="Project screenshot" />
+                                    </div>
                                 </div>
                             </div>
                         </div>
