Update third project to Florals AI

--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
                     </div>
                 </div>
                 <div class="project-info">
-                    <h3>Project Name</h3>
-                    <p>Something special that showcases unique design thinking.</p>
-                    <span class="project-tags">Web App • React • Design System</span>
+                    <h3>Florals AI</h3>
+                    <p>Flower identifier app powered by AI.</p>
+                    <span class="project-tags">iOS • AI • Design</span>
                 </div>
             </article>
         </div>
