Add Florals AI description

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 </div>
                 <div class="project-info">
                     <h3>Florals AI</h3>
-                    <p>Flower identifier app powered by AI.</p>
+                    <p>Florals AI was created so users can not only identify a flower type by snapping a photo, but know the exact variety type the flower is so they can replicate the exact flower and color of that flower in their own garden. A loved feature is the ability to upload an image of a favorite bouquet, and the app breaks down each flower and variety type that makes up the bouquet. It makes growing your dream bouquet so easy.</p>
                     <span class="project-tags">iOS • AI • Design</span>
                 </div>
             </article>
