Add Head Gardener carousel images

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                             <div class="carousel-slide">
                                 <div class="mini-phone large">
                                     <div class="mini-screen">
-                                        <img src="images/IMG_9490 copy.PNG" alt="Head Gardener screenshot 1" />
+                                        <img src="images/IMG_9498.PNG" alt="Head Gardener screenshot 1" />
                                     </div>
                                 </div>
                             </div>
@@ -187,7 +187,7 @@
                             <div class="carousel-slide">
                                 <div class="mini-phone large">
                                     <div class="mini-screen">
-                                        <img src="images/IMG_9490 copy.PNG" alt="Head Gardener screenshot 3" />
+                                        <img src="images/IMG_9489.PNG" alt="Head Gardener screenshot 3" />
                                     </div>
                                 </div>
                             </div>
