Add Head Gardener description

--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
                 </div>
                 <div class="project-info">
                     <h3>Head Gardener</h3>
-                    <p>Another cool project with interesting challenges and solutions.</p>
-                    <span class="project-tags">iOS • Design • Development</span>
+                    <p>Head Gardener puts a personal Master Gardener in your back pocket. Gardeners know the importance of walking their gardens and taking notes of what they see, changes that are happening, and issues they need to fix. Head Gardener allows you to voice brain dump everything you see in your garden, and it creates a detailed maintenance plan and answers all the questions you have. Head Gardener is your companion to your best garden yet.</p>
+                    <span class="project-tags">iOS • AI • Design</span>
                 </div>
             </article>
 
