Change to full name

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
         <div class="contact-form-container">
             <!-- Step 1: Name -->
             <div class="form-step active" data-step="1">
-                <h2>What's your name?</h2>
+                <h2>What's your full name?</h2>
                 <div class="input-wrapper">
                     <input type="text" id="user-name" placeholder="Your name" autocomplete="name" />
                 </div>
