Add use voice option and update success message

--- a/contact.html
+++ b/contact.html
@@ -62,6 +62,7 @@
 
                 <div class="text-input-container hidden" id="text-input-container">
                     <textarea id="project-idea" placeholder="Tell me about your project or idea..."></textarea>
+                    <button class="use-voice-btn" id="use-voice-btn">Use voice to type</button>
                 </div>
 
                 <div class="transcription-preview hidden" id="transcription-preview">
@@ -78,7 +79,7 @@
                 <div class="success-message">
                     <span class="success-icon">✓</span>
                     <h2>Thanks!</h2>
-                    <p>I'll get back to you soon.</p>
+                    <p>I'll be in touch within 24 hours!</p>
                     <a href="/" class="back-home-link">← Back to home</a>
                 </div>
             </div>
