Add About page with photo collage layout

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 <body>
     <!-- Floating Nav -->
     <nav class="nav">
-        <a href="#" class="logo">katie p.</a>
-        <a href="#contact" class="nav-cta">Let's Talk</a>
+        <a href="/" class="logo">katie p.</a>
+        <div class="nav-links">
+            <a href="/about.html" class="nav-link">About</a>
+            <a href="/contact.html" class="nav-cta">Let's Talk</a>
+        </div>
     </nav>
 
     <!-- Hero Section -->
